Tesla model 3 image
tesla update

--- a/Sito_web/templates/home.html
+++ b/Sito_web/templates/home.html
@@ -144,7 +144,7 @@
         <!-- Modello 2 -->
         <div class="col-md-4 mb-4">
           <div class="card">
-            <img src="https://www.tesla.com/sites/default/files/models3-new/social/model-3-social.jpg" class="card-img-top"
+            <img src="https://cdn-drivek-datak.motork.net/configurator-imgs/cars/it/Original/TESLA/MODEL-3/43005_BERLINA-3-VOLUMI-4-PORTE/tesla-model-3-front-view.jpg" class="card-img-top"
               alt="Tesla Model 3">
             <div class="card-body">
               <h5 class="card-title">Model 3</h5>
