--- a/Sito_web/templates/home.html
+++ b/Sito_web/templates/home.html
@@ -103,6 +103,7 @@
   padding: 10px 20px;
   border-radius: 10px;
   transition: 0.3s;
+  font-family: 'Julius Sans One', sans-serif;
     }
 
     .btn-outline-dark:hover {
