--- a/Sito_web/templates/home.html
+++ b/Sito_web/templates/home.html
@@ -153,7 +153,7 @@
     <div class="container">
       <h1 class="display-4" style="color: White;">Innovazione Elettrica Per un Futuro Sostenibile</h1>
 
-      <p class="lead" style="color: White" >Guida il cambiamento con Tesla.</p>
+      <p class="lead" style="color: White" >Guida il cambiamento con Tesla</p>
       <div class="d-flex justify-content-center">
         <!-- Bottoni per operazioni -->
         <a href="#" class="btn btn-outline-dark btn-lg mx-2" style="color: White" >Inserimento dati</a>
