--- a/Sito_web/templates/visualizza_dati.html
+++ b/Sito_web/templates/visualizza_dati.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="it">
+<link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Press+Start+2P&family=Staatliches&display=swap" rel="stylesheet">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,11 +12,19 @@
             background-color: #121212;
             color: white;
         }
+        h4 {
+        font-family: 'Staatliches', sans-serif;
+        text-align: center;
+        }
+        .text-center {
+        font-family: 'Staatliches', sans-serif;
+        }
         .card-header {
             background-color: #333;
         }
         .table {
             color: white;
+
         }
         .table th, .table td {
             text-align: center;
