--- a/Sito_web/templates/visualizza_dati.html
+++ b/Sito_web/templates/visualizza_dati.html
@@ -9,12 +9,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #121212;
+              background-image: url('https://c4.wallpaperflare.com/wallpaper/772/767/583/texture-leather-wallpaper-preview.jpg'); /* Sostituisci con il link o il percorso dell'immagine */
+
             color: white;
         }
+
+        h1 {
+        font-size: 60px;
+        color : #ff003c;
+        }
+
         h4 {
         font-family: 'Staatliches', sans-serif;
         text-align: center;
+        font-size: 28px
         }
         .text-center {
         font-family: 'Staatliches', sans-serif;
@@ -26,8 +34,11 @@
             color: white;
 
         }
-        .card-body{
+        .table-header-custom{
         font-family: 'Staatliches', sans-serif;
+        font-size: 24px;
+        border-bottom: 2px solid #888;
+        color : #ff003c;
         }
         .table th, .table td {
             text-align: center;
@@ -44,9 +55,10 @@
                 <div class="card-header">
                     <h4>Dati Storici dei Titoli</h4>
                 </div>
-                <div class="card-body">
+
                     <table class="table table-dark">
-                        <thead>
+                        <thead class="table-header-custom">
+
                             <tr>
                                 <th>Date</th>
                                 <th>Open</th>
