--- a/Sito_web/templates/home.html
+++ b/Sito_web/templates/home.html
@@ -131,13 +131,13 @@
               <a class="nav-link" href="{{ url_for('modelli') }}">Tutti i modelli</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Tecnologia</a>
+              <a class="nav-link" href="{{ url_for('tecnologia') }}">Tecnologia</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Assistenza</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contatti</a>
+              <a class="nav-link" href="{{ url_for('contatti') }}">Contatti</a>
             </li>
           </ul>
         </div>
