--- a/Sito_web/templates/tecnologia.html
+++ b/Sito_web/templates/tecnologia.html
@@ -48,6 +48,13 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
         }
+        .section img {
+    max-width: 80%;
+    height: auto;
+    display: block;
+    margin: 10px auto;
+}
+
         .caption {
             text-align: center;
             font-style: italic;
@@ -59,21 +66,21 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container">
-            <a class="navbar-brand" href="#">Tesla</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#autopilot">Autopilot</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#batteria">Batteria</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#software">Software</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#design">Design</a></li>
-                </ul>
-            </div>
+    <div class="container">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mx-auto">
+                <li class="nav-item"><a class="nav-link" href="#autopilot">Autopilot</a></li>
+                <li class="nav-item"><a class="nav-link" href="#batteria">Batteria</a></li>
+                <li class="nav-item"><a class="nav-link" href="#software">Software</a></li>
+                <li class="nav-item"><a class="nav-link" href="#design">Design</a></li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
+
 
     <!-- Contenuto -->
     <div class="container mt-4">
