--- a/Sito_web/templates/modelli.html
+++ b/Sito_web/templates/modelli.html
@@ -16,6 +16,7 @@
             background-image: url('https://images.pexels.com/photos/3934623/pexels-photo-3934623.jpeg?cs=srgb&dl=pexels-shotbyrain-3934623.jpg&fm=jpg');
             background-size: cover;
             background-position: center;
+            background-attachment: fixed;
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
