--- a/Sito_web/templates/home.html
+++ b/Sito_web/templates/home.html
@@ -150,9 +150,9 @@
       <p class="lead" style="color: White" >Guida il cambiamento con Tesla</p>
       <div class="d-flex justify-content-center">
         <!-- Bottoni per operazioni -->
-        <a href="#" class="btn btn-outline-dark btn-lg mx-2" style="color: White" >Inserimento dati</a>
-        <a href="#" class="btn btn-outline-dark btn-lg mx-2" style="color: White">Modifica dati</a>
         <a href="{{ url_for('visualizza_dati') }}" class="btn btn-outline-dark btn-lg mx-2" style="color: White">Visualizzazione dati</a>
+        <a href="{{ url_for('grafico1') }}" class="btn btn-outline-dark btn-lg mx-2" style="color: White" >Grafico 1</a>
+        <a href="{{ url_for('grafico2') }}" class="btn btn-outline-dark btn-lg mx-2" style="color: White">Grafico 2</a>
         <a href="#" class="btn btn-outline-dark btn-lg mx-2" style="color: White">Eliminazione dati</a>
       </div>
     </div>
