--- a/Sito_web/templates/home.html
+++ b/Sito_web/templates/home.html
@@ -39,9 +39,15 @@
 
     }
 
-    h1 ,h2  {
+    h2  {
     font-family: 'Staatliches', sans-serif;
     text-shadow: 2px 2px 5px rgba(255, 255, 255, 0.5);
+    }
+
+    h1  {
+    font-family: 'Staatliches', sans-serif;
+    text-shadow: 2px 2px 5px rgba(255, 255, 255, 0.5);
+    font-size: 200px;
     }
 
 
@@ -145,7 +151,7 @@
   <!-- Sezione Hero -->
   <section class="hero d-flex justify-content-center align-items-center text-center">
     <div class="container">
-      <h1 class="display-4" style="color: White;">Innovazione Elettrica Per un Futuro Sostenibile</h1>
+      <h1 class="display-4" style="color: White;" style="font-size: 200%;">Innovazione Elettrica Per un Futuro Sostenibile</h1>
 
       <p class="lead" style="color: White" >Guida il cambiamento con Tesla</p>
       <div class="d-flex justify-content-center">
