--- a/Sito_web/templates/home.html
+++ b/Sito_web/templates/home.html
@@ -213,7 +213,7 @@
   <!-- Footer -->
   <footer class="footer text-center">
     <div class="container">
-      <p>&copy; 2025 Tesla, Inc. | <a href="#">Privacy</a> | <a href="#">Termini</a></p>
+      <p>&copy; 2025 Tesla, Inc. | <a href="{{ url_for('privacy') }}">Privacy</a> | <a href="{{ url_for('privacy') }}">Termini</a></p>
       <p>
         Seguici su:
         <a href="#">Facebook</a> |
