--- a/Sito_web/templates/tecnologia.html
+++ b/Sito_web/templates/tecnologia.html
@@ -126,7 +126,7 @@
 
     <!-- Footer -->
     <footer class="footer text-center mt-4 p-3 bg-dark text-light">
-        <p>&copy; 2025 Tesla, Inc. | <a href="#">Privacy</a> | <a href="#">Termini</a></p>
+        <p>&copy; 2025 Tesla, Inc. | <a href="{{ url_for('privacy') }}">Privacy</a> | <a href="{{ url_for('privacy') }}">Termini</a></p>
     </footer>
 
     <!-- Bootstrap JS -->
