--- a/Sito_web/templates/home.html
+++ b/Sito_web/templates/home.html
@@ -159,7 +159,7 @@
         <a href="{{ url_for('visualizza_dati') }}" class="btn btn-outline-dark btn-lg mx-2" style="color: White">Visualizzazione dati</a>
         <a href="{{ url_for('grafico1') }}" class="btn btn-outline-dark btn-lg mx-2" style="color: White" >Grafico 1</a>
         <a href="{{ url_for('grafico2') }}" class="btn btn-outline-dark btn-lg mx-2" style="color: White">Grafico 2</a>
-        <a href="#" class="btn btn-outline-dark btn-lg mx-2" style="color: White">Eliminazione dati</a>
+        <a href="{{ url_for('graficiinterattivi') }}" class="btn btn-outline-dark btn-lg mx-2" style="color: White">Grafici interattivi</a>
       </div>
     </div>
   </section>
